--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ plugins {
 group 'org.example'
 version '1.0-SNAPSHOT'
 
+spigot {
+    version.value '1.15.2'
+}
+
 repositories {
     mavenCentral()
 }
