--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ gradlePlugin {
     }
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 group 'SpaceGameDev'
 version '1.0'
 
