--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ fabric.properties
 ### Gradle template
 **/.gradle
 **/build/
-server
+/example/server/
 
 # Ignore Gradle GUI config
 gradle-app.setting
