[spigot] added saveguard to not publish plugin on non-master

--- a/build.gradle
+++ b/build.gradle
@@ -61,3 +61,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 }
+
+publishPlugins.doFirst {
+    if(!verPost.isEmpty())
+        throw new GradleException("Only execute this on master! Otherwise versioning is messed up.");
+}
