--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - test
+  - publish
 
 image: $CI_REGISTRY_IMAGE/example-build:$CI_COMMIT_REF_SLUG
 before_script:
@@ -20,6 +21,7 @@ cache:
 build-plugin:
   stage: build
   image: openjdk:8-alpine
+  dependencies: []
   script:
     - ./gradlew assemble
   artifacts:
@@ -32,6 +34,7 @@ build-test-image:
   image: docker:19.03.1
   services:
     - docker:19.03.1-dind
+  dependencies: []
   variables:
     DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
@@ -53,6 +56,7 @@ build-test-image:
 
 test-plugin:
   stage: test
+  dependencies: []
   script:
     - ./gradlew test
   artifacts:
@@ -64,6 +68,7 @@ test-plugin:
 test-example-server:
   stage: test
   image: $CI_REGISTRY_IMAGE/example-build:$CI_COMMIT_REF_SLUG
+  dependencies: []
   cache:
     key: example-server
     paths:
