--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,3 +93,17 @@ test-example-server:
     - ( timeout 180s tail -fn +0 server.log & ) | grep -q "$MESSAGE" || ( echo "Timeout waiting for message!" && exit 1 )
     - kill $SERVERPID
     - while kill -0 $SERVERPID &>/dev/null; do sleep 1; done
+
+
+
+publish-plugin:
+  stage: publish
+  dependencies: []
+  environment:
+    name: gradle-plugin-portal
+    url: https://plugins.gradle.org/plugin/com.gitlab.firestar99.spigotgradle.server
+  script:
+    - ./gradlew publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISH_KEY -Pgradle.publish.secret=$GRADLE_PUBLISH_SECRET
+  only:
+    refs:
+      - master
