[ci] publish-plugin: fixed -detached version appendix

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group 'com.gitlab.firestar99.spigotgradle'
 def details = versionDetails()
 def verPre = details.lastTag.substring(0, details.lastTag.lastIndexOf('.') + 1)
 def verNumber = Integer.parseInt(details.lastTag.substring(details.lastTag.lastIndexOf('.') + 1, details.lastTag.length())) + details.commitDistance
-def verPost = details.branchName == "master" ? "" : details.branchName ? "-" + details.branchName : "-detached"
+def verPost = details.branchName == null || details.branchName == "master" ? "" : "-" + details.branchName
 version verPre + verNumber + verPost
 
 gradlePlugin {
