Add ability to specify flavor (paper/spigot) Download the paper binary as we don't have BuildTools for that

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    dependencies {
+        classpath 'com.google.code.gson:gson:2.10.1'
+    }
+}
+
 plugins {
     id 'java-gradle-plugin'
     id 'com.gradle.plugin-publish' version '0.11.0'
     id "com.palantir.git-version" version "0.12.3"
+    id 'maven-publish'
 }
 
 group 'dev.ein.spigotgradle'
@@ -30,6 +37,7 @@ gradlePlugin {
             displayName = 'Setup a spigot server for development'
             description = 'Automatically builds the spigot jar using the spigot BuildTool, sets up a spigot server in /server and puts the plugins in the correct place'
             implementationClass = 'dev.ein.spigotgradle.server.SpigotServerPlugin'
+            dependencies {}
         }
     }
 }
@@ -46,8 +54,13 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    gradlePluginPortal()
 }
 
 dependencies {
     implementation 'org.jetbrains:annotations:16.0.3'
+    implementation 'de.undercouch:gradle-download-task:5.6.0'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4-alpha1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:7.1.2'
 }
