--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'com.gradle.plugin-publish' version '0.11.0'
     id "com.palantir.git-version" version "0.12.3"
     id 'maven-publish'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 
@@ -67,6 +68,7 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.4-alpha1'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:7.1.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 publishing {
@@ -78,5 +80,15 @@ publishing {
                 password = mavenPassword
             }
         }
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
