--- a/build.gradle
+++ b/build.gradle
@@ -13,15 +13,7 @@ plugins {
 
 
 group 'dev.ein.spigotgradle'
-def details = versionDetails()
-def verPre = details.lastTag.substring(0, details.lastTag.lastIndexOf('.') + 1)
-def verNumber = Integer.parseInt(details.lastTag.substring(details.lastTag.lastIndexOf('.') + 1, details.lastTag.length()))
-def verPost = details.branchName == null || details.branchName == "master" ? "" : "-" + details.branchName
-if(!details.isCleanTag) {
-    verPost += "-SNAPSHOT"
-    verNumber++
-}
-version verPre + verNumber + verPost
+version project.findProperty("spigotgradle.version") ?: System.getenv("VERSION")
 
 gradlePlugin {
     plugins {
