--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/EinDev/SpigotGradle")
+            url = uri("https://maven.pkg.github.com/EinDev/SpigotGradlePlugin")
             credentials {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
