chore: migrate buildscript to gradle

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           VERSION: ${{ needs.get-version-number.outputs.version }}
 
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
+      # the publishing section of your build.gradle.kts
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
